--- a/src/app/cobranza/components/cobranza.component.html
+++ b/src/app/cobranza/components/cobranza.component.html
@@ -1,9 +1,10 @@
+
 <form #f="ngForm" (ngSubmit)="f.form.valid && guardarCobranza(f)">
     <main>
         <div class="container text-center">
             <div class="row">
                 <div class="col">
-                    <h3>Cobranzas</h3>
+                    <h3>{{titulo}}</h3>
                 </div>
             </div>
 
@@ -13,6 +14,24 @@
                     <input #fechaCobranza [ngClass]="{'requerido': !cobranza.fecha}" type="date" id="fechaCobranza" name="fechaCobranza" [(ngModel)]="cobranza.fecha">
                     <label *ngIf="!cobranza.fecha" for="fechaCobranza">Campo Requerido</label>
                 </div>
+                <div class="col">
+                <conductorForm-component 
+                    [legajoHabilitado]="legajoHabilitado"
+                    [legajoAcomHabilitado]="legajoAcomHabilitado"
+                    [movilHabilitado]="movilHabilitado"
+                    (legajo)="agregarLegajo($event)">
+                </conductorForm-component>
+                </div>
+                    
+            </div>
+            <modal-mensaje
+                [popUpModalMensaje]="popUpModalMensaje" 
+                (response)="closeModalMensaje($event)"
+                [modalMensaje]="modalMensaje"
+                >
+            </modal-mensaje>
+            <!--
+            <div class="row">
                 <div class="col">
                     <conductorForm-component 
                             [legajoHabilitado]="legajoHabilitado"
@@ -49,8 +68,13 @@
                     <input type="observacion" id="observacion" name="observacion" [(ngModel)]="cobranza.observacion">
                 </div>
             </div>
-            <hr>
-
+            
+            -->
+            <br>
+            <app-ingreso-form
+                [conceptoList]="conceptoList">
+            </app-ingreso-form>
+            <br>
             <div class="row">
                 <div class="col">
                     <input type="submit" value="Guardar" class="btn btn-primary" >
