ajustes por modularizacion de ingresos, egresos y productos

--- a/src/app/cobranza/components/cobranza-list/cobranza-list.component.html
+++ b/src/app/cobranza/components/cobranza-list/cobranza-list.component.html
@@ -17,10 +17,10 @@
                     <tr *ngFor="let cobranza of cobranzas; index as i">
                         <td>{{cobranza.fecha}}</td>
                         <td>{{cobranza.legajo.numeroLegajo}}</td>
-                        <td>{{cobranza.cliente}}</td>
+                        <!--<td>{{cobranza.cliente}}</td>
                         <td>{{cobranza.recibo}}</td>
                         <td>{{cobranza.observacion}}</td>
-                        <td>{{cobranza.importe}}</td>
+                        <td>{{cobranza.importe}}</td>-->
                         
 
                     </tr>
