--- a/src/app/components/productos/producto-form/producto-form.component.html
+++ b/src/app/components/productos/producto-form/producto-form.component.html
@@ -1,42 +1,46 @@
-<form #f="ngForm" (ngSubmit)="f.form.valid" >
-<div class="container text-center">
+<form #f="ngForm" (ngSubmit)="f.form.valid">
+  <div class="container text-center">
     <div class="row row-cols-1  text-center">
-      <div class="col"><h3>{{titulo}}</h3></div>
+      <div class="col">
+        <h3>{{titulo}}</h3>
+      </div>
     </div>
-</div>
-<div class="container text-center">
+  </div>
+  <div class="container text-center">
     <div class="row row-cols-3">
-        
-        <div class="col">
-            <table style="width: 100%;">
-                <thead>
-                    <th style="width: 25%;">Producto</th>
-                    <th style="width: 10%;">Cantidad</th>
-                    <th style="width: 10%;">Kg Vendidos</th>
-                    <th style="width: 10%;">Total Kg por tipo</th>
-                </thead>
-                <tbody>
-                    
-                    @for (grupo of groupedProductos; track $index) {
-                        <tr *ngFor="let productos of grupo.productos;index as i">
-                            <td>{{productos.tipoEnvase.nombre+" "+productos.tipoProducto.nombre+" "+productos.tipoEnvase.capacidad+" kg."}}</td>
-                            <td><input type="number" min="0" name="cantidadProducto" [(ngModel)]="productos.cantidad" (ngModelChange)="actualizarValores(productos,groupedProductos)"/></td>
-                            <td>@if(productos.cantidad){ {{productos.cantidad * productos.tipoEnvase.capacidad}} }@else{ 0 }</td>
-                            <td *ngIf="i==0" [rowSpan]="(i==0)?2:1">{{grupo.cantidad}} Kg     {{productos.tipoProducto.nombre}} </td>
-                            
-                        </tr>
-                    }
-                    <tr>
-                        <td><b>Total</b></td>
-                        <td><b>{{totalCantidadesProducto}} Unidades</b></td>
-                        <td><b>{{totalKgProducto}} Kg</b></td>
-                    </tr>    
-                    
-                    
-                </tbody>
-            </table>
-        </div>
-        
+
+      <div class="col">
+        <table style="width: 100%;">
+          <thead>
+            <th>Producto</th>
+            <th>Cantidad</th>
+            <th>Kg Vendidos</th>
+            <th>Total Kg por tipo</th>
+          </thead>
+          <tbody>
+
+            @for (grupo of groupedProductos; track $index) {
+            <tr *ngFor="let productos of grupo.productos;index as i">
+              <td>{{productos.tipoEnvase.nombre+" "+productos.tipoProducto.nombre+" "+productos.tipoEnvase.capacidad+"
+                kg."}}</td>
+              <td><input type="number" min="0" name="cantidadProducto" [(ngModel)]="productos.cantidad"
+                  (ngModelChange)="actualizarValores(productos,groupedProductos)" /></td>
+              <td>@if(productos.cantidad){ {{productos.cantidad * productos.tipoEnvase.capacidad}} }@else{ 0 }</td>
+              <td *ngIf="i==0" [rowSpan]="(i==0)?2:1">{{grupo.cantidad}} Kg {{productos.tipoProducto.nombre}} </td>
+
+            </tr>
+            }
+            <tr>
+              <td><b>Total</b></td>
+              <td><b>{{totalCantidadesProducto}} Unidades</b></td>
+              <td><b>{{totalKgProducto}} Kg</b></td>
+            </tr>
+
+
+          </tbody>
+        </table>
+      </div>
+
     </div>
-</div>
+  </div>
 </form>
