--- a/src/app/rendicion/components/rendicionForm.component.css
+++ b/src/app/rendicion/components/rendicionForm.component.css
@@ -1,100 +1,154 @@
 body {
-    margin: 0;
-    font-family: Arial, sans-serif;
-    display: flex;
-    flex-direction: column;
-    height: 100vh;
-    overflow: hidden; /* Evitar scroll en el body */
+  margin: 0;
+  font-family: Arial, sans-serif;
+  display: flex;
+  flex-direction: column;
+  height: 100vh;
+  overflow: hidden; /* Evitar scroll en el body */
 }
 
 header, footer {
-    width: 100%;
-    position: fixed;
-    left: 0;
-    background-color: #333;
-    color: white;
-    text-align: center;
-    padding: 1rem 0;
-    z-index: 1000; /* Asegura que el header y footer estén encima del contenido */
+  width: 100%;
+  position: fixed;
+  left: 0;
+  background-color: #333;
+  color: white;
+  text-align: center;
+  padding: 1rem;
+  z-index: 1000; /* Asegura que el header y footer estén encima del contenido */
+  box-sizing: border-box; /* Asegura que el padding se incluya en el tamaño total */
 }
 
 header {
-    top: 0;
+  top: 0;
 }
 
 footer {
-    padding: 5px;
-    bottom: 0;
-    height: 50px;
+  bottom: 0;
+  height: 50px;
+  padding: 0.5rem 0; /* Ajusta el padding para mantener el footer pequeño */
 }
 
 main {
-    flex: 1;
-    margin-top: 5px; /* Espacio para el encabezado */
-    margin-bottom: 60px; /* Espacio para el pie de página */
-    height: calc(80vh - 10px); /* 80% del viewport menos la altura del header y footer */
-    overflow-y: auto;
+  flex: 1;
+  margin-top: 60px; /* Espacio para el encabezado */
+  margin-bottom: 60px; /* Espacio para el pie de página */
+  overflow-y: auto;
+  padding: 20px;
+  box-sizing: border-box;
 }
 
 .content {
-    padding: 20px;
-    background-color: #f4f4f4;
-    border: 1px solid #ddd;
-    box-sizing: border-box;
-    height: 100%;
+  background-color: #f4f4f4;
+  border: 1px solid #ddd;
+  border-radius: 8px; /* Agrega bordes redondeados */
+  box-sizing: border-box;
 }
 
 table {
-    width: 100%;
-    border-collapse: collapse;
-    margin-bottom: 20px; /* Espacio inferior entre tablas */
+  width: 100%;
+  border-collapse: collapse;
+  margin-bottom: 20px; /* Espacio inferior entre tablas */
 }
 
 th, td {
-    border: 1px solid #ddd;
-    padding: 8px;
-    text-align: left;
+  border: 1px solid #ddd;
+  padding: 12px; /* Aumenta el padding para una mejor legibilidad */
+  text-align: left;
 }
 
 th {
-    background-color: #333;
-    color: white;
+  background-color: #333;
+  color: white;
 }
 
 .autocomplete-container {
-    position: relative;
-    width: 100%;
-  }
-  
-  input {
-    width: 100%;
-    padding: 8px;
-    box-sizing: border-box;
-  }
-  
-  .options {
-    position: absolute;
-    width: 100%;
-    border: 1px solid #ccc;
-    background-color: white;
-    max-height: 150px;
-    overflow-y: auto;
-    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
-    z-index: 1000;
-    list-style-type: none;
-    margin: 0;
-    padding: 0;
-  }
-  
-  .options li {
-    padding: 8px;
-    cursor: pointer;
-  }
-  
-  .options li:hover {
-    background-color: #f1f1f1;
-  }
+  position: relative;
+  width: 100%;
+}
 
-input.requerido{
-    border-color: red; 
+input {
+  width: 100%;
+  padding: 10px; /* Aumenta el padding para mayor comodidad */
+  box-sizing: border-box;
+  border: 1px solid #ccc;
+  border-radius: 4px; /* Agrega bordes redondeados */
+}
+
+.options {
+  position: absolute;
+  width: calc(100% - 2px); /* Ajusta el ancho para tener en cuenta el borde del input */
+  border: 1px solid #ccc;
+  background-color: white;
+  max-height: 150px;
+  overflow-y: auto;
+  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+  z-index: 1000;
+  list-style-type: none;
+  margin: 0;
+  padding: 0;
+  border-radius: 4px; /* Agrega bordes redondeados */
+}
+
+.options li {
+  padding: 10px;
+  cursor: pointer;
+}
+
+.options li:hover {
+  background-color: #f1f1f1;
+}
+
+input.requerido {
+  border-color: red;
+}
+
+
+.card-container {
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  align-items: center;
+  border: 1px solid #ddd;
+  border-radius: 8px;
+  padding: 20px;
+  background-color: #f9f9f9;
+  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+  margin: 20px;
+  max-width: 800px;
+  margin: auto;
+}
+
+.card-content {
+  flex: 1;
+  text-align: left;
+  padding: 0 20px;
+}
+
+.input-group {
+  display: flex;
+  flex-direction: column;
+  margin-bottom: 15px;
+}
+
+.input-group label {
+  margin-bottom: 5px;
+  font-weight: bold;
+}
+
+.input-group input {
+  padding: 8px;
+  border: 1px solid #ccc;
+  border-radius: 4px;
+}
+
+.input-group .error {
+  color: red;
+  font-size: 12px;
+  margin-top: 5px;
+}
+
+h2 {
+  text-align: center;
+  margin-bottom: 20px;
 }
